# c_cpp_meson_gitlab_appveyor_travis_ci

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  README.md  appveyor.yml  meson.build
build-aux/: artifact.py  meson.build
src/: Greeter.cpp  Greeter.h  Greeter.hpp  meson.build
test/: meson.build
